# open_laval

./: .gitignore  README.md  pyproject.toml  setting.toml
.github/workflows/: tests.yml
configs/: asymmetric_strong.toml  asymmetric_strong_lower.toml  example.toml
docs/en/: SupersonicTurbineDesign.tex
docs/jp/: SupersonicTurbineDesign.tex
docs/nah/: GLOSSARY.md  SupersonicTurbineDesign.tex
openlaval/: blade.py  characteristics.py  cli.py  config.py  evaluation.py  geometry.py  io.py  physics.py  plotting.py  validation.py
openlaval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_blade.py  test_characteristics.py  test_cli.py  test_config.py  test_evaluation.py  test_geometry.py  test_io.py  test_physics.py  test_plotting.py  test_validation.py
